--- a/terms.html
+++ b/terms.html
@@ -1,22 +1,114 @@
-Arcanara Tarot Bot — Terms of Use
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Arcanara Tarot Bot — Terms and Conditions</title>
+  <style>
+    body {
+      font-family: "Georgia", serif;
+      background-color: #0b0b10;
+      color: #f3f1f6;
+      margin: 0;
+      padding: 40px;
+      line-height: 1.7;
+    }
+    h1, h2 {
+      color: #d7bfff;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2em;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      margin-top: 2em;
+      border-bottom: 1px solid #444;
+      padding-bottom: 0.3em;
+    }
+    a {
+      color: #b891f0;
+      text-decoration: none;
+      border-bottom: 1px solid #b891f0;
+    }
+    a:hover {
+      color: #fff;
+      border-color: #fff;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: #15151f;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(180, 150, 255, 0.2);
+    }
+    p {
+      margin-bottom: 1em;
+    }
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 0.9em;
+      color: #999;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>🔮 Arcanara Tarot Bot — Terms of Use</h1>
+    <p><em>Last updated: October 2025</em></p>
 
-Last updated: [2025 Oct 7]
+    <h2>1. Purpose</h2>
+    <p>
+      The Arcanara Tarot Bot (the “Bot”) provides tarot readings, spiritual insights,
+      and related content for entertainment and self-reflection purposes only.
+      It is <strong>not intended</strong> to replace professional, medical, legal,
+      financial, or psychological advice.
+    </p>
 
-By using the Arcanara Tarot Bot (the “Bot”), you agree to the following Terms of Use:
+    <h2>2. User Conduct</h2>
+    <p>
+      You agree not to use the Bot for any unlawful, abusive, or harassing behavior.
+      Do not use it to post or request harmful, discriminatory, or explicit content.
+    </p>
 
-Purpose
-Arcanara Tarot Bot provides tarot readings, spiritual insights, and related content for entertainment and self-reflection purposes only. It is not intended to replace professional, medical, legal, financial, or psychological advice.
+    <h2>3. Data & Privacy</h2>
+    <p>
+      The Bot may temporarily store limited interaction data (such as Discord usernames
+      or messages) to deliver readings and features. No personal data is collected or
+      shared for commercial use.
+    </p>
+    <p>
+      If you have questions or wish to request data deletion, contact the developer
+      through the Bot’s official support or feedback channel.
+    </p>
 
-User Conduct
-You agree not to use the Bot for any unlawful, abusive, or harassing behavior. Do not use it to post or request harmful, discriminatory, or explicit content.
+    <h2>4. Disclaimer of Liability</h2>
+    <p>
+      The Bot and its developer make no guarantees of accuracy or outcome. All readings
+      are for entertainment and spiritual exploration only. You use this Bot at your
+      own discretion. The developer is not responsible for any actions or decisions
+      made based on its content.
+    </p>
 
-Data & Privacy
-The Bot may temporarily store limited interaction data (such as your Discord username or messages) only to deliver readings or features. No personal data is collected or shared for commercial use.
+    <h2>5. Modifications</h2>
+    <p>
+      These Terms may be updated at any time. Continued use of the Bot means you accept
+      the most recent version.
+    </p>
 
-If you have questions or wish to request data deletion, contact the developer through the Bot’s official support channel.
+    <p>
+      <a href="index.html">← Return to Arcanara Home</a>
+    </p>
+  </div>
 
-Disclaimer of Liability
-The Bot and its developer make no guarantees of accuracy or outcome. You use this Bot entirely at your own discretion. The developer is not responsible for any actions or decisions you make based on its content.
+  <footer>
+    &copy; <span id="year"></span> Arcanara Tarot Bot • All rights reserved
+  </footer>
 
-Modifications
-These Terms may be updated at any time. Continued use of the Bot means you accept the most recent version.
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
