--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Arcanara Tarot Bot — Terms of Use</title>
+  <title>Arcanara Tarot Bot — Terms & Privacy</title>
   <style>
     body {
       font-family: "Georgia", serif;
@@ -21,6 +21,7 @@
       color: #b891f0;
       text-decoration: none;
       border-bottom: 1px solid #b891f0;
+      margin: 0 8px;
     }
     a:hover {
       color: #fff;
@@ -36,12 +37,16 @@
 <body>
   <h1>🔮 Welcome to Arcanara Tarot Bot</h1>
   <p>
-    This site hosts the official <strong>Terms and Conditions</strong> for the Arcanara Tarot Bot.<br>
-    Please read them carefully before using the bot.
+    This site hosts the official <strong>Terms of Use</strong> and <strong>Privacy Policy</strong>
+    for the Arcanara Tarot Bot.<br>
+    Please review these documents carefully before using the bot.
   </p>
+
   <p>
-    👉 <a href="terms.html">View the Terms and Conditions</a>
+    👉 <a href="terms.html">View the Terms of Use</a> • 
+    <a href="privacy.html">View the Privacy Policy</a>
   </p>
+
   <footer>
     &copy; <span id="year"></span> Arcanara Tarot Bot • All rights reserved
   </footer>
